compiler/testData/diagnostics/testsWithStdLib/javaClassOnCompanion.diag.txt
/javaClassOnCompanion.kt:28:12: error: unresolved reference: javaClass
val e0 = E.javaClass
           ^^^^^^^^^
